--- a/AlbumPage.html
+++ b/AlbumPage.html
@@ -252,9 +252,33 @@
             </div>
             <div class="scrollbar p-3" style="height: 90vh">
               <!-- da qui parte il mio main -->
-              <div class="rounded position-relative p-3" data-bs-theme="dark" id="main">
+
+              <div class="container position-relative" data-bs-theme="dark">
+                <div class="row">
+                  <div class="col ps-5 ms-4">#</div>
+                  <div class="col-4">Titolo</div>
+                  <div class="col-4">Riproduzioni</div>
+                  <div class="col-2">
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="16"
+                      height="16"
+                      fill="white"
+                      class="bi bi-stopwatch"
+                      viewBox="0 0 16 16"
+                    >
+                      <path d="M8.5 5.6a.5.5 0 1 0-1 0v2.9h-3a.5.5 0 0 0 0 1H8a.5.5 0 0 0 .5-.5z"></path>
+                      <path
+                        d="M6.5 1A.5.5 0 0 1 7 .5h2a.5.5 0 0 1 0 1v.57c1.36.196 2.594.78 3.584 1.64l.012-.013.354-.354-.354-.353a.5.5 0 0 1 .707-.708l1.414 1.415a.5.5 0 1 1-.707.707l-.353-.354-.354.354-.013.012A7 7 0 1 1 7 2.071V1.5a.5.5 0 0 1-.5-.5M8 3a6 6 0 1 0 .001 12A6 6 0 0 0 8 3"
+                      ></path>
+                    </svg>
+                  </div>
+                </div>
+              </div>
+
+              <div class="rounded position-relative" data-bs-theme="dark" id="main">
                 <div>
-                  <div class="container mt-2">
+                  <div class="container my-4">
                     <div class="row">
                       <div class="col">
                         <div class="row text-white">
@@ -335,10 +359,10 @@
                       </svg>
                     </div>
                     <table class="table-dark text-white mt-4 ms-5" id="tracksTable">
-                      <thead class="border-bottom border-light-subtle">
+                      <thead class="border-bottom border-secondary">
                         <tr>
                           <th scope="col">#</th>
-                          <th scope="col d-inline-block pb-5">Titolo</th>
+                          <th scope="col " class="d-inline-block pb-3 mt-3">Titolo</th>
                           <th scope="col">Riproduzioni</th>
                           <th scope="col">
                             <svg
