creazione Query per Header

--- a/home.html
+++ b/home.html
@@ -10,8 +10,8 @@
   <body class="bg-black text-white container-fluid m-0">
     <!-- style="max-height: 100vh" -->
     <div class="">
-      <div class="row justify-content-center p-2">
-        <header class="col-2 rounded p-0" style="min-width: 300px">
+      <div class="row p-2">
+        <header class="col-2 rounded p-0">
           <div
             class="rounded bg-darkness p-4 mb-2 d-flex justify-content-center align-items-center d-xl-block"
             style="height: 15vh"
@@ -146,11 +146,7 @@
                   </svg>
                 </button>
               </div>
-            </div>
-            <div class="scrollbar text-truncate mt-2" style="height: 60vh">
-              <div>
-                <ul id="listaBraniArtistiAlbum" class="p-0"></ul>
-              </div>
+              <ul id="listaBraniArtistiAlbum" class="p-0"></ul>
             </div>
           </div>
         </header>
@@ -313,7 +309,7 @@
             </div>
           </div>
         </main>
-        <aside class="col-2 rounded bg-darkness scrollbar d-none d-xl-block" style="height: 90vh"></aside>
+        <aside class="col rounded bg-darkness scrollbar d-none d-xl-block" style="height: 90vh"></aside>
       </div>
       <footer class="fixed-bottom bg-black p-0 m-0 container-fluid" style="height: 10vh; width: 100wh">
         <div class="row p-2">
