cambiato annunci da canzone ad album e aggiunto eventi

--- a/home.html
+++ b/home.html
@@ -183,7 +183,7 @@
             </div>
             <div class="scrollbar p-3" style="height: 78vh">
               <div>
-                <div class="my-3 mx-3" style="background: linear-gradient(13deg, rgba(0, 0, 0, 1) 0%, rgba(18, 18, 18, 1) 90%)">
+                <div class="my-3 mx-3 pointer" style="background: linear-gradient(13deg, rgba(0, 0, 0, 1) 0%, rgba(18, 18, 18, 1) 90%)">
                   <div id="annunci" class="d-flex align-items-center flex-column flex-lg-row p-3">
                     <img src="" id="imgAnnunci" class="me-5 object-fit-cover" width="200" height="200" alt="cover album" />
                   </div>
