--- a/home.html
+++ b/home.html
@@ -153,9 +153,10 @@
 
         <main class="col col-xl-8 rounded" data-bs-theme="dark">
           <div class="bg-darkness rounded" style="height: 90vh">
-            <div class="d-flex align-items-center pt-3 mx-3">
+            <div class="d-flex align-items-center pt-3 mx-3 mb-3">
               <div class="me-auto d-flex">
                 <button
+                  id="btnIndiestro"
                   class="btn rounded-circle bg-black d-flex justify-content-center align-items-center me-3"
                   style="width: 40px; height: 40px"
                 >
@@ -167,6 +168,7 @@
                   </svg>
                 </button>
                 <button
+                  id="btnAvanti"
                   class="btn rounded-circle bg-black d-flex justify-content-center align-items-center"
                   style="width: 40px; height: 40px"
                 >
@@ -178,7 +180,7 @@
                   </svg>
                 </button>
                 <div class="position-relative d-none" id="formSearch">
-                  <form role="search" class="d-flex justify-content-center align-items-center mx-3">
+                  <form role="search" class="mt-1 d-flex justify-content-center align-items-center mx-3">
                     <input
                       id="searchInput"
                       class="rounded-pill border-0 py-1 px-4 z-1 bg-transparent text-white"
@@ -205,9 +207,12 @@
                   </div>
                 </div>
               </div>
-              <div class="d-flex mb-3">
-                <button class="btn bg-white rounded-pill text-black me-2"><b>Esplora Premium</b></button>
+              <div class="d-flex">
+                <button id="btnEsplora" class="btn bg-white rounded-pill text-black me-2">
+                  <b>Esplora Premium</b>
+                </button>
                 <a
+                  id="btnInstall"
                   class="btn rounded-pill bg-black rounded-pill text-white me-2"
                   draggable="false"
                   data-encore-id="buttonPrimary"
