update correlati artist page

--- a/artists.html
+++ b/artists.html
@@ -337,7 +337,7 @@
                 <div class="row d-flex justify-content-between pe-2 ps-4 mb-4 me-0">
                   <div class="container">
                     <div class="row">
-                      <div class="col-12 col-md-8 d-flex me-0 justify-content-between g-0 align-items-center">
+                      <div class="col-12 d-flex me-0 justify-content-between g-0 align-items-center">
                         <!-- <div class="d-flex align-items-center"> -->
                         <div id="songsList" class="row">
                           <h5 class="col-12 mb-4">Popolari</h5>
@@ -345,11 +345,18 @@
                         <!-- </div> -->
                       </div>
 
-                      <div id="likedSongs" class="col-12 col-md-4 mb-3">
+                      <div id="likedSongs" class="col-12 mt-4 mb-3">
                         <h5 class="mb-4 col-12 w-100">Brani che ti piacciono</h5>
                       </div>
                     </div>
                   </div>
+                </div>
+                <div id="correlati" class="row g-0 bg-darkness">
+                  <a
+                    class="link-light link-underline-opacity-0 link-underline-opacity-100-hover fs-3 py-4 ms-3"
+                    href="#"
+                    >Correlati</a
+                  >
                 </div>
               </div>
             </div>
