migliorata responsiveness altro footer

--- a/AlbumPage.html
+++ b/AlbumPage.html
@@ -391,15 +391,18 @@
                       <tbody></tbody>
                     </table>
                     <!-- Altre Card dell'artista -->
+
                     <h4 class="mt-5 ms-2" id="titleAlbumBottom"></h4>
                     <div class="row mb-5" id="altriAlbums"></div>
-                    <div class="col-2">
+
+                    <!-- Altro Footer  -->
+                    <div class="col col-l-2">
                       <h6>Azienda</h6>
                       <p class="text-secondary m-0 p-2">Chi siamo</p>
                       <p class="text-secondary m-0 p-2">Opportunita´ di lavoro</p>
                       <p class="text-secondary m-0 p-2">For the record</p>
                     </div>
-                    <div class="col-2">
+                    <div class="col col-l-2">
                       <h6>Comunity</h6>
                       <p class="text-secondary m-0 p-2">Per artisti</p>
                       <p class="text-secondary m-0 p-2">Sviluppatori</p>
@@ -407,13 +410,13 @@
                       <p class="text-secondary m-0 p-2">Investitori</p>
                       <p class="text-secondary m-0 p-2">Venditori</p>
                     </div>
-                    <div class="col-2">
+                    <div class="col col-l-2">
                       <h6>Link utili</h6>
                       <p class="text-secondary m-0 p-2">Assistenza</p>
                       <p class="text-secondary m-0 p-2">App per cellulare gratuita</p>
                       <p class="text-secondary m-0 p-2">Diritti del consumatore</p>
                     </div>
-                    <div class="col-2">
+                    <div class="col col-l-2">
                       <h6>Piani Spotify</h6>
                       <p class="text-secondary m-0 p-2">Premium Individual</p>
                       <p class="text-secondary m-0 p-2">Premium Duo</p>
@@ -421,7 +424,7 @@
                       <p class="text-secondary m-0 p-2">Premium Student</p>
                       <p class="text-secondary m-0 p-2">Spotify Free</p>
                     </div>
-                    <div class="col-2">
+                    <div class="col col-l-2">
                       <a
                         class="rounded-circle border border-dark me-3 p-2 text-white"
                         href="https://instagram.com/spotify"
