--- a/AlbumPage.html
+++ b/AlbumPage.html
@@ -283,7 +283,7 @@
                     <div class="row">
                       <div class="col">
                         <div class="row text-white">
-                          <div class="col mt-3 mt-xxl-5">
+                          <div class="col col-xxl-3 mt-3 mt-xxl-5">
                             <img
                               id="albumImg"
                               src="./assets/imgs/main/image-1.jpg"
@@ -292,7 +292,7 @@
                               class="img-responsive"
                             />
                           </div>
-                          <div class="col-8 p-0 mt-4">
+                          <div class="col-8 p-0 mt-4 ms-3 ms-xxl-0">
                             <h6 class="mt-3">Album</h6>
                             <h1 class="display-1 fw-bold mb-3" id="albumTitle">Gioventu bruciata</h1>
                             <div class="d-flex">
@@ -310,7 +310,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="container border-bottom border-light-subtle mb-5">
+                <div class="border-bottom border-light-subtle mb-5">
                   <div class="row mt-2" id="tabella">
                     <div class="col d-flex mt-4 ms-3">
                       <button class="rounded-circle border border-dark me-3 p-2" id="playBtn">
