--- a/AlbumPage.html
+++ b/AlbumPage.html
@@ -370,8 +370,8 @@
                         <tr>
                           <th scope="col">#</th>
                           <th scope="col " class="d-inline-block pb-3 mt-3">Titolo</th>
-                          <th scope="col">Riproduzioni</th>
-                          <th scope="col">
+                          <th scope="col" class="d-none d-xxl-table-cell">Riproduzioni</th>
+                          <th scope="col" class="d-none d-lg-table-cell">
                             <svg
                               xmlns="http://www.w3.org/2000/svg"
                               width="16"
