migliorata responsiveness immagine banner grande

--- a/AlbumPage.html
+++ b/AlbumPage.html
@@ -283,13 +283,13 @@
                     <div class="row">
                       <div class="col">
                         <div class="row text-white">
-                          <div class="col col-xxl-3 mt-3 mt-xxl-5">
+                          <div class="col col-xxl-3 mt-3 mt-xxl-5 d-flex">
                             <img
                               id="albumImg"
                               src="./assets/imgs/main/image-1.jpg"
                               alt=""
                               style="height: 230px"
-                              class="img-responsive"
+                              class="img-responsive mx-auto"
                             />
                           </div>
                           <div class="col-8 p-0 mt-4 ms-3 ms-xxl-0">
