compilazione dati mp3

--- a/home.html
+++ b/home.html
@@ -13,10 +13,10 @@
       <div class="row p-2">
         <header class="col-2 rounded p-0">
           <div
-            class="rounded bg-darkness p-4 mb-2 d-flex justify-content-center align-items-center d-xl-block"
+            class="rounded bg-darkness p-4 mb-2 d-flex justify-content-center align-items-center d-lg-block"
             style="height: 15vh"
           >
-            <ul class="list-unstyled d-flex flex-column gap-3 m-0">
+            <ul class="list-unstyled d-flex flex-column gap-3 m-0 mt-2">
               <li class="align-middle pointer" id="homeBtn">
                 <svg
                   data-encore-id="icon"
@@ -156,7 +156,7 @@
             <div class="d-flex align-items-center pt-3 mx-3 mb-3">
               <div class="me-auto d-flex">
                 <button
-                  id="btnIndiestro"
+                  id="btnIndietro"
                   class="btn rounded-circle bg-black d-flex justify-content-center align-items-center me-3"
                   style="width: 40px; height: 40px"
                 >
@@ -169,7 +169,7 @@
                 </button>
                 <button
                   id="btnAvanti"
-                  class="btn rounded-circle bg-black d-flex justify-content-center align-items-center"
+                  class="btn rounded-circle bg-black d-flex justify-content-center align-items-center d-none d-lg-inline"
                   style="width: 40px; height: 40px"
                 >
                   <svg data-encore-id="icon" role="img" aria-hidden="true" style="width: 21px" viewBox="0 0 20 20">
