check merge gabriel in develop

--- a/home.html
+++ b/home.html
@@ -200,14 +200,14 @@
               <div id="mixPref" class="row g-0 bg-darkness">
                 <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover fs-3 py-4 ms-3" href="#">Uno sguardo al passato</a>
               </div>
-              <section class="mt-5">
+              <section class="mt-5 text-secondary">
                 <div class="container">
                   <div class="row align-items-top">
                     <div class="col-9">
                       <div class="row">
                         <div class="col-3">
                           <ul class="navbar-nav">
-                            <h5>Azienda</h5>
+                            <h5 class="text-white">Azienda</h5>
                             <li>
                               <a class="nav-link" aria-current="page" href="#">Chi siamo</a>
                             </li>
@@ -220,7 +220,7 @@
                           </ul>
                         </div>
                         <div class="col-3">
-                          <h5>Community</h5>
+                          <h5 class="text-white">Community</h5>
                           <ul class="navbar-nav" data-bs-theme="dark">
                             <li>
                               <a class="nav-link" aria-current="page" href="#">Per artisti</a>
@@ -240,7 +240,7 @@
                           </ul>
                         </div>
                         <div class="col-3">
-                          <h5>Link utili</h5>
+                          <h5 class="text-white">Link utili</h5>
                           <ul class="navbar-nav" data-bs-theme="dark">
                             <li>
                               <a class="nav-link" aria-current="page" href="#">Assistenza</a>
@@ -254,7 +254,7 @@
                           </ul>
                         </div>
                         <div class="col-3">
-                          <h5>Piani Spotify</h5>
+                          <h5 class="text-white">Piani Spotify</h5>
                           <ul class="navbar-nav" data-bs-theme="dark">
                             <li>
                               <a class="nav-link" aria-current="page" href="#">Premium Individual</a>
@@ -302,14 +302,14 @@
                     <hr class="text-secondary my-3" />
 
                     <div>
-                      <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover py-4 me-3" href="#">Informazioni legali</a>
-                      <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover py-4 me-3" href="#">Sicurezza e Centro sulla privacy</a>
-                      <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover py-4 me-3" href="#">Informativa sulla privacy</a>
-                      <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover py-4 me-3" href="#">Impostazioni cookie</a>
-                      <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover py-4 me-3" href="#">Info annunci</a>
-                      <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover py-4 me-5" href="#">Accessibilità</a>
+                      <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover py-4 me-3 text-secondary" href="#">Informazioni legali</a>
+                      <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover py-4 me-3 text-secondary" href="#">Sicurezza e Centro sulla privacy</a>
+                      <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover py-4 me-3 text-secondary" href="#">Informativa sulla privacy</a>
+                      <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover py-4 me-3 text-secondary" href="#">Impostazioni cookie</a>
+                      <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover py-4 me-3 text-secondary" href="#">Info annunci</a>
+                      <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover py-4 me-5 text-secondary" href="#">Accessibilità</a>
                       <br />
-                      <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover py-4 fs-5" href="#">© 2024 Apotify AB</a>
+                      <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover py-4 fs-5 text-secondary" href="#">© 2024 Apotify AB</a>
                     </div>
                   </div>
                 </div>
