reso tutte le pagine grandi uguali ( le side bar sono uguali per tutti)

--- a/home.html
+++ b/home.html
@@ -275,7 +275,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="col-3">
+                    <div class="col-3 d-flex justify-content-end">
                       <a href="#">
                         <svg xmlns="http://www.w3.org/2000/svg" class="me-3" width="22" height="22" fill="white" class="bi bi-facebook" viewBox="0 0 16 16">
                           <path
