--- a/AlbumPage.html
+++ b/AlbumPage.html
@@ -6,6 +6,7 @@
     <title>Spotify- AlbumPage</title>
     <link rel="stylesheet" href="./assets/dist/css/style.min.css" />
     <link rel="stylesheet" href="assets/css/circular-font.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/color-thief/2.3.2/color-thief.umd.js"></script>
   </head>
   <body class="bg-black text-white container-fluid m-0">
     <!-- style="max-height: 100vh" -->
