check merge dario in develop
e cambio footer

--- a/search.html
+++ b/search.html
@@ -185,14 +185,14 @@
             <div class="scrollbar p-3" style="height: 78vh">
               <!-- ************************************************************mid di spotify*************************************************************************************** -->
               <div id="searchZone" class="row"></div>
-              <section class="mt-5">
+              <section class="mt-5 text-secondary">
                 <div class="container">
                   <div class="row align-items-top">
                     <div class="col-9">
                       <div class="row">
                         <div class="col-3">
                           <ul class="navbar-nav">
-                            <h5>Azienda</h5>
+                            <h5 class="text-white">Azienda</h5>
                             <li>
                               <a class="nav-link" aria-current="page" href="#">Chi siamo</a>
                             </li>
@@ -205,7 +205,7 @@
                           </ul>
                         </div>
                         <div class="col-3">
-                          <h5>Community</h5>
+                          <h5 class="text-white">Community</h5>
                           <ul class="navbar-nav" data-bs-theme="dark">
                             <li>
                               <a class="nav-link" aria-current="page" href="#">Per artisti</a>
@@ -225,7 +225,7 @@
                           </ul>
                         </div>
                         <div class="col-3">
-                          <h5>Link utili</h5>
+                          <h5 class="text-white">Link utili</h5>
                           <ul class="navbar-nav" data-bs-theme="dark">
                             <li>
                               <a class="nav-link" aria-current="page" href="#">Assistenza</a>
@@ -239,7 +239,7 @@
                           </ul>
                         </div>
                         <div class="col-3">
-                          <h5>Piani Spotify</h5>
+                          <h5 class="text-white">Piani Spotify</h5>
                           <ul class="navbar-nav" data-bs-theme="dark">
                             <li>
                               <a class="nav-link" aria-current="page" href="#">Premium Individual</a>
@@ -260,7 +260,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="col-3">
+                    <div class="col-3 d-flex justify-content-end">
                       <a href="#">
                         <svg xmlns="http://www.w3.org/2000/svg" class="me-3" width="22" height="22" fill="white" class="bi bi-facebook" viewBox="0 0 16 16">
                           <path
@@ -287,14 +287,14 @@
                     <hr class="text-secondary my-3" />
 
                     <div>
-                      <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover py-4 me-3" href="#">Informazioni legali</a>
-                      <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover py-4 me-3" href="#">Sicurezza e Centro sulla privacy</a>
-                      <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover py-4 me-3" href="#">Informativa sulla privacy</a>
-                      <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover py-4 me-3" href="#">Impostazioni cookie</a>
-                      <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover py-4 me-3" href="#">Info annunci</a>
-                      <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover py-4 me-5" href="#">Accessibilità</a>
+                      <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover py-4 me-3 text-secondary" href="#">Informazioni legali</a>
+                      <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover py-4 me-3 text-secondary" href="#">Sicurezza e Centro sulla privacy</a>
+                      <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover py-4 me-3 text-secondary" href="#">Informativa sulla privacy</a>
+                      <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover py-4 me-3 text-secondary" href="#">Impostazioni cookie</a>
+                      <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover py-4 me-3 text-secondary" href="#">Info annunci</a>
+                      <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover py-4 me-5 text-secondary" href="#">Accessibilità</a>
                       <br />
-                      <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover py-4 fs-5" href="#">© 2024 Apotify AB</a>
+                      <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover py-4 fs-5 text-secondary" href="#">© 2024 Apotify AB</a>
                     </div>
                   </div>
                 </div>
