--- a/AlbumPage.html
+++ b/AlbumPage.html
@@ -178,7 +178,7 @@
                 </button>
               </div>
             </div>
-            <div class="scrollbar" style="height: 80vh" id="scrollThead">
+            <div class="scrollbar" style="height: calc(90vh - 80px)" id="scrollThead">
               <!-- da qui parte il mio main -->
 
               <div class="rounded position-relative" data-bs-theme="dark" id="main">
@@ -250,7 +250,7 @@
                     <div class="row mb-5" id="altriAlbums"></div>
 
                     <!-- Altro Footer  -->
-                    <section class="my-5 text-secondary">
+                    <section class="my-5">
                       <div class="container">
                         <div class="row align-items-top">
                           <div class="col-9">
@@ -349,17 +349,17 @@
                             </a>
                           </div>
 
-                          <hr class="text-secondary my-3" />
+                          <hr class="my-3" />
 
                           <div>
-                            <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover py-4 me-3 text-secondary" href="#">Informazioni legali</a>
-                            <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover py-4 me-3 text-secondary" href="#">Sicurezza e Centro sulla privacy</a>
-                            <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover py-4 me-3 text-secondary" href="#">Informativa sulla privacy</a>
-                            <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover py-4 me-3 text-secondary" href="#">Impostazioni cookie</a>
-                            <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover py-4 me-3 text-secondary" href="#">Info annunci</a>
-                            <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover py-4 me-5 text-secondary" href="#">Accessibilità</a>
+                            <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover py-4 me-3" href="#">Informazioni legali</a>
+                            <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover py-4 me-3" href="#">Sicurezza e Centro sulla privacy</a>
+                            <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover py-4 me-3" href="#">Informativa sulla privacy</a>
+                            <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover py-4 me-3" href="#">Impostazioni cookie</a>
+                            <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover py-4 me-3" href="#">Info annunci</a>
+                            <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover py-4 me-5" href="#">Accessibilità</a>
                             <br />
-                            <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover py-4 fs-5 text-secondary" href="#">© 2024 Apotify AB</a>
+                            <a class="link-light link-underline-opacity-0 link-underline-opacity-100-hover py-4 fs-5" href="#">© 2024 Apotify AB</a>
                           </div>
                         </div>
                       </div>
