--- a/home.html
+++ b/home.html
@@ -12,8 +12,8 @@
     <div class="">
       <div class="row p-2">
         <header class="col-2 rounded p-0">
-          <div class="rounded bg-darkness mb-2 d-lg-block" style="height: 15vh">
-            <ul class="list-unstyled d-flex p-2 justify-content-center flex-column gap-3 m-0">
+          <div id="home-cerca" class="rounded bg-darkness d-flex align-items-center mb-2" style="height: 15vh">
+            <ul class="list-unstyled d-flex ps-2 justify-content-center flex-column gap-3 m-0">
               <li class="align-middle pointer" id="homeBtn">
                 <svg data-encore-id="icon" role="img" aria-hidden="true" class="Svg-sc-ytk21e-0 bneLcE home-icon QbaKKdcHNA2x3_YJvpYu" viewBox="0 0 24 24" style="width: 30">
                   <path
@@ -41,7 +41,7 @@
               </li>
             </ul>
           </div>
-          <div class="bg-darkness rounded p-3">
+          <div class="bg-darkness rounded p-3" style="height: 74vh">
             <div class="bg-darkness mb-3" style="height: 10vh">
               <div class="d-flex">
                 <button class="btn text-white me-auto bg-darkness mb-2 p-1" style="width: 150px">
@@ -86,7 +86,7 @@
                 </button>
               </div>
             </div>
-            <div class="scrollbar text-truncate d-flex justify-content-center align-items-center d-xl-block" style="height: 56vh">
+            <div class="scrollbar text-truncate d-flex justify-content-center align-items-center d-xl-block" style="height: 58vh">
               <div class="d-flex justify-content-between">
                 <button class="btn d-none d-xl-inline">
                   <svg data-encore-id="icon" role="img" aria-hidden="true" style="width: 15px" viewBox="0 0 16 16">
