update responsiveness artist page

--- a/artists.html
+++ b/artists.html
@@ -207,8 +207,11 @@
                 </div>
               </div>
               <div class="d-flex mb-3">
-                <button class="btn bg-white rounded-pill text-black me-2"><b>Esplora Premium</b></button>
+                <button id="btnEsplora" class="btn bg-white rounded-pill text-black me-2">
+                  <b>Esplora Premium</b>
+                </button>
                 <a
+                  id="btnInstall"
                   class="btn rounded-pill bg-black rounded-pill text-white me-2"
                   draggable="false"
                   data-encore-id="buttonPrimary"
