aggiunta funzione che muove il playBtn in posizione fissa nel thead

--- a/AlbumPage.html
+++ b/AlbumPage.html
@@ -319,7 +319,7 @@
                 </div>
                 <div class="border-bottom border-light-subtle">
                   <div class="row mt-2" id="tabella">
-                    <div class="col d-flex mt-4 ms-3">
+                    <div class="col d-flex mt-4 ms-3 position-relative">
                       <button class="rounded-circle border border-dark me-3 p-2" id="playBtn">
                         <svg
                           xmlns="http://www.w3.org/2000/svg"
