aggiunto background ad hiddenBar

--- a/AlbumPage.html
+++ b/AlbumPage.html
@@ -259,7 +259,7 @@
               <thead>
                 <tr>
                   <th scope="col" class="ps-5">#</th>
-                  <th scope="col " class="d-table-cell mt-3 col-xxl-5 me-5">Titolo</th>
+                  <th scope="col " class="d-table-cell mt-3 col-xxl-5 me-5 ps-1">Titolo</th>
                   <th scope="col" class="d-none d-xxl-table-cell col-xxl-3 ps-5">Riproduzioni</th>
                   <th scope="col" class="d-none d-lg-table-cell col-xxl-3" style="padding-left: 88px">
                     <svg
